# MMG

./: LICENSE  README.md  cross_species_integration.ipynb  cross_species_transfer.ipynb  pyproject.toml  requirements.txt
example/: cross_species_integration.ipynb  cross_species_transfer.ipynb
rmge/: model.py
src/mmg_sc/: __init__.py  integration.py  preprocess.py
