[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "mmg-sc"
version = "0.1.0"
authors = [
    { name = "Yongkang Sun", email = "sunyk2023@ion.ac.cn" },
]
description = "Meta Marker Generator (MMG) for multimodal and cross-species single-cell data integration"
readme = "README.md"
requires-python = ">=3.8,<3.12"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "matplotlib==3.7.5",
    "numpy==1.22.4",
    "pandas==2.0.3",
    "POT==0.9.4",
    "scanpy==1.9.3",
    "scikit-learn==1.3.2",
    "scipy==1.10.1",
    "seaborn==0.13.2",
    "torch==2.0.1",
]

[project.urls]
"Homepage" = "https://github.com/sunyk740/MMG"
"Bug Reports" = "https://github.com/sunyk740/MMG/issues"
"Repository" = "https://github.com/sunyk740/MMG.git"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
